<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#072B42"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/deleteDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/are_you_sure_you_want_to_delete_the_contact"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/deleteDialogText"
        android:layout_alignParentEnd="true"
        android:background="#E91E63" />

    <Button
        android:id="@+id/saveDeleteDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteDialogText"
        android:layout_alignEnd="@+id/deleteButton"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="143dp"
        android:background="@color/teal_700"
        android:text="@string/cancel"
        android:textStyle="bold" />


</RelativeLayout>