<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddNewContact"
    android:background="#09446A">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Add New Contact"
        android:background="#072B42"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMenu">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_width="2dp"
            app:civ_border_color="#208AE8"/>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_text_fields_24"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawablePadding="10dp"/>
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:text="@string/save"
            android:backgroundTint="#208AE8"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>